<resources>
    <string name="app_name">Comics</string>
    <string name="action_favourite">Favorites</string>
    <string name="action_refresh">Refresh</string>
    <string name="error_no_internet">There isn\'t Internet.</string>
    <string name="error_timeout">Server doesn\'t respond (timeout).</string>
    <string name="error_server_connect">We can\'t connect with Marvel\'s server.;</string>
    <string name="font_avengeance">avengeance</string>
    <string name="font_true_crimes">true_crimes</string>
    <string name="unavailable">Unavailable price</string>
    <string name="search_title">Search</string>
    <string name="hint_search">Search comics</string>
    <string name="offline">Offline</string>

    <string name="title_activity_detail">Comic detail</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lorem_ipsum">¿Qué es Lorem Ipsum? Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas \"Letraset\", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="no_description">There isn\'t description for this comic.</string>
    <string name="label_name">Name:\t</string>
    <string name="label_url">URL:\t</string>
    <string name="item_title">Here item title</string>
    <string name="item_subtitle">Here subtitle</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="dots">Dots</string>
    <string name="error_session">Session failed. Please try again.</string>
    <string name="action_logout">Logout</string>
    <string name="action_profile">Profile</string>
    <string name="default_name">Renzo D. Santillán Chavez</string>
    <string name="default_email">rsantillanc@gmail.com</string>
</resources>
