<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pe.nextdots.comics.comics.MainActivity">

    <item
        android:id="@+id/main_action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_action_favourite"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/action_favourite"
        android:checkable="true"
        app:showAsAction="never" />
</menu>
